# tds-project-1

./: .env.local.template  .gitignore  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/services/: evaluator.py  github_service.py  llm_service.py
app/utils/: retry.py
tests/: test_api.py  test_evaluator.py  test_github_service.py  test_llm_service.py
