[project]
name = "tds-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "openai>=2.4.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "pygithub>=2.8.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "tenacity>=9.1.2",
    "uvicorn>=0.37.0",
    "asyncio>=4.0.0",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
